--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 *{
     box-sizing: border-box;
     margin: 0;
@@ -6,4 +7,20 @@
 }
 body{
     font-family: 'Open Sans', sans-serif;
+    /* 400 700 */
+}
+
+/* heading
+font-family: 'Poppins', sans-serif;
+600 */
+
+main{
+    margin:2rem 2rem 0 2rem;
+}
+.nav{
+   display: flex;
+   justify-content: space-between;
+}
+.nav__item--logo{
+    width:7.5rem;
 }
