--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,13 @@
 body{
     font-family: 'Open Sans', sans-serif;
     /* 400 700 */
+    font-size: 16px;
+}
+@media (min-width:821px) {
+    body{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    }
 }
 
 /* heading
@@ -18,15 +25,34 @@ header{
     margin:2rem 1rem;
 }
 
-
+a{
+    text-decoration: none;
+}
 .nav{
    display: flex;
    justify-content: space-between;
 }
 .nav__item--logo{
-    width:7.5rem;
+    width:6.5rem;
+}
+
+.nav__item--link{
+    font-size: 0.8rem;
+    font-weight: 700;
 }
 
 main{
-    margin:2rem 2rem 0 2rem;
+    margin:4rem 2rem;
+}
+
+.block__1__1st__heading{
+    font-size: 1.5rem;
+    text-align: center;
+    padding:.5rem;
+    margin-bottom: 1.7rem;
+    text-align: center;
+}
+.block__1__para{
+    text-align: center;
+    padding: .2rem;
 }
