--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,11 @@ main{
     margin:4rem 2rem;
 }
 
+.block__1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .block__1__1st__heading{
     font-size: 1.5rem;
     text-align: center;
@@ -55,4 +60,14 @@ main{
 .block__1__para{
     text-align: center;
     padding: .2rem;
+}
+.btn{
+    width:250px;
+    padding:.7rem 3rem;
+    border-radius: 20px;
+    background-color: hsl(322, 100%, 66%);
+    margin: 2rem 0;
+    color:hsl(193, 100%, 96%);
+    font-weight: 700;
+    font-size: 0.8rem;
 }
