--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body{
     font-family: 'Open Sans', sans-serif;
     /* 400 700 */
     font-size: 16px;
+    background-image: url("../assets/images/bg-hero-mobile.svg");
+    background-color: hsl(193, 100%, 96%);
 }
 @media (min-width:821px) {
     body{
@@ -28,6 +30,7 @@ header{
 a{
     text-decoration: none;
 }
+
 .nav{
    display: flex;
    justify-content: space-between;
@@ -66,8 +69,12 @@ main{
     padding:.7rem 3rem;
     border-radius: 20px;
     background-color: hsl(322, 100%, 66%);
-    margin: 2rem 0;
+    margin: 2rem 0 4rem 0;
     color:hsl(193, 100%, 96%);
     font-weight: 700;
     font-size: 0.8rem;
+}
+.block__2__img{
+    width:100%;
+    margin-bottom: 1rem;
 }
