--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body{
     font-family: 'Open Sans', sans-serif;
     /* 400 700 */
-    font-size: 16px;
+    /* font-size: 16px; */
     background-image: url("../assets/images/bg-hero-mobile.svg");
     background-color: hsl(193, 100%, 96%);
 }
@@ -39,6 +39,7 @@ a{
     width:6.5rem;
 }
 
+
 .nav__item--link{
     font-size: 0.8rem;
     font-weight: 700;
@@ -54,6 +55,8 @@ main{
     align-items: center;
 }
 .block__1__1st__heading{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
     font-size: 1.5rem;
     text-align: center;
     padding:.5rem;
@@ -61,8 +64,12 @@ main{
     text-align: center;
 }
 .block__1__para{
+    
     text-align: center;
     padding: .2rem;
+    font-weight: 500;
+    color:  hsl(180, 13%, 5%);
+    line-height: 1.5;
 }
 .btn{
     width:250px;
