--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@ body{
     font-family: 'Open Sans', sans-serif;
     /* 400 700 */
     /* font-size: 16px; */
-    background-image: url("../assets/images/bg-hero-mobile.svg");
-    background-color: hsl(193, 100%, 96%);
+   
 }
 @media (min-width:821px) {
     body{
@@ -24,26 +23,30 @@ font-family: 'Poppins', sans-serif;
 600 */
 
 header{
-    margin:2rem 1rem;
+    padding:2rem 1rem;
+    background-image: url("../assets/images/bg-hero-mobile.svg");
+    background-color: hsl(193, 100%, 96%);
+    background-repeat: no-repeat;
 }
 
 a{
     text-decoration: none;
 }
 
-.nav{
+.header{
    display: flex;
    justify-content: space-between;
+   /* justify-content: baseline; */
 }
-.nav__item--logo{
+.header__item--logo{
     width:6.5rem;
 }
 
 
-.nav__item--link{
+.header__item--link{
     font-size: 0.76rem;
     font-weight: 700;
-    padding:.4rem 1.2rem;
+    padding:.3rem 1.2rem;
     border-radius: 20px;
     background-color: white;
     box-shadow: 0 6px 10px -7px gray;
@@ -52,7 +55,10 @@ a{
 main{
     margin:4rem 2rem;
 }
+.section__1{
+   
 
+}
 .block__1{
     display: flex;
     flex-direction: column;
@@ -63,14 +69,14 @@ main{
     font-weight: 600;
     font-size: 1.5rem;
     text-align: center;
-    padding:.5rem;
-    margin-bottom: 1.7rem;
+    padding:1.5rem;
+    margin: 5rem 0 0 0 ;
     text-align: center;
 }
 .block__1__para{
     
     text-align: center;
-    padding: .2rem;
+    padding: 1.2rem;
     font-weight: 500;
     color:  hsl(180, 13%, 5%);
     line-height: 1.5;
@@ -80,7 +86,7 @@ main{
     padding:.7rem 3rem;
     border-radius: 20px;
     background-color: hsl(322, 100%, 66%);
-    margin: 2rem 0 4rem 0;
+    margin: 1rem 0 4rem 0;
     color:hsl(193, 100%, 96%);
     font-weight: 700;
     font-size: 0.8rem;
@@ -88,4 +94,8 @@ main{
 .block__2__img{
     width:100%;
     margin-bottom: 1rem;
+}
+
+.block__3__img{
+    width:100%;
 }
