--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,12 @@ main{
    
 
 }
-.block__1{
+.header__block__1{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.block__1__1st__heading{
+.header__1st__heading{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 1.5rem;
@@ -73,7 +73,7 @@ main{
     margin: 5rem 0 0 0 ;
     text-align: center;
 }
-.block__1__para{
+.header__para{
     
     text-align: center;
     padding: 1.2rem;
@@ -91,7 +91,10 @@ main{
     font-weight: 700;
     font-size: 0.8rem;
 }
-.block__2__img{
+.header__block__2{
+padding:0 1.5rem;
+}
+.header__img{
     width:100%;
     margin-bottom: 1rem;
 }
