--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,12 @@ a{
    justify-content: space-between;
    /* justify-content: baseline; */
 }
-.header__item--logo{
+.header__logo{
     width:6.5rem;
 }
 
 
-.header__item--link{
+.header__link{
     font-size: 0.76rem;
     font-weight: 700;
     padding:.3rem 1.2rem;
@@ -55,16 +55,13 @@ a{
 main{
     margin:4rem 2rem;
 }
-.section__1{
-   
 
-}
-.header__block__1{
+.header__block-1{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.header__1st__heading{
+.header__1st-heading{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 1.5rem;
@@ -91,14 +88,18 @@ main{
     font-weight: 700;
     font-size: 0.8rem;
 }
-.header__block__2{
+.header__block-2{
 padding:0 1.5rem;
 }
+
 .header__img{
     width:100%;
     margin-bottom: 1rem;
 }
 
-.block__3__img{
+/* main */
+
+.section-1__img{
     width:100%;
+    padding:0 1.5rem;
 }
