--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a{
 }
 
 main{
-    margin:4rem 2rem;
+    margin:4rem 1rem;
 }
 
 .header__block-1{
@@ -102,4 +102,30 @@ padding:0 1.5rem;
 .section-1__img{
     width:100%;
     padding:0 1.5rem;
+}
+.section-1{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    /* margin:9rem 0; */
+    border: 1px solid black;
+
+}
+
+.section-1__heading{
+    text-align: center;
+    font-size:1.3rem;
+}
+
+.section-1__para{
+    text-align: center;
+    margin:.5rem 0 2rem 0;
+    padding:.8rem 2.5rem 2.5rem 2.5rem;
+    font-size: .9rem;
+    line-height: 1.5;
+    color:hsl(208, 11%, 55%);
+    font-weight: 400;
+}
+.section-1__block-1{
+padding:4rem 0.5rem;
 }
