--- a/css/style.css
+++ b/css/style.css
@@ -197,3 +197,27 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
         padding:4rem 1.5rem;
     
     }
+
+    .section-4{
+        box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        }
+
+  .section-4__heading{
+            text-align: center;
+            font-size:1.22rem;
+            margin: 3rem 0 1rem 0;
+          }
+        
+    .section-4__btn{
+        width:250px;
+        padding:.7rem 3rem;
+        border-radius: 20px;
+        background-color: hsl(322, 100%, 66%);
+        margin: 1rem 0 2rem 0;
+        color:hsl(193, 100%, 96%);
+        font-weight: 700;
+        font-size: 0.8rem;
+    }
