--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
 
     /* footer */
     .footer{
-        margin: 4rem 0 2rem 0;
+        margin: 4rem 0 0 0;
         padding:8rem 1rem 3rem 1rem;
         background-color:  hsl(192, 100%, 9%);
     }
@@ -235,4 +235,27 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
     .footer__location-logo{
         width: 15px;
         height:20px;
+    }
+
+    #footer__fb-logo{
+        padding:10px 14px 10px 13px;
+        color:white;
+        border:1px solid white;
+        border-radius:50%;
+
+    }
+    #footer__twitter-logo{
+        padding:10px;
+        color:white;
+        border:1px solid white;
+        border-radius:50%;
+
+    }
+
+    #footer__insta-logo{
+        padding:10.5px ;
+        color:white;
+        border:1px solid white;
+        border-radius:50%;
+
     }
