--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
     }
 
     #footer__insta-logo{
-        padding:10.5px ;
+        padding:10px 10.5px 10px 10.5px ;
         color:white;
         border:1px solid white;
         border-radius:50%;
