--- a/css/style.css
+++ b/css/style.css
@@ -199,10 +199,14 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
     }
 /* section-4 */
     .section-4{
-        box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
+        /* box-shadow: 1px 1px 5px 5px rgb(245, 244, 244); */
         display: flex;
         flex-direction: column;
         align-items: center;
+        position: relative;
+        top: 120px;
+        background-color: white;
+        border-radius: 20px;
         }
 
   .section-4__heading{
@@ -213,10 +217,11 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
         
     .section-4__btn{
         width:250px;
-        padding:.7rem 3rem;
+        padding:.7rem 2rem;
+        text-align: center;
         border-radius: 20px;
         background-color: hsl(322, 100%, 66%);
-        margin: 1rem 0 2rem 0;
+        margin: 1rem 0 3rem 0;
         color:hsl(193, 100%, 96%);
         font-weight: 700;
         font-size: 0.8rem;
