--- a/css/style.css
+++ b/css/style.css
@@ -125,12 +125,21 @@ padding:0 1.5rem;
     box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
 }
 
-.section-1__heading{
+.section-1__heading,.section-2__heading, .section-3__heading{
     text-align: center;
     font-size:1.3rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
+.section-4__heading{
+    text-align: center;
+    font-size:1.22rem;
+    margin: 3rem 0 1rem 0;
+    font-family: 'Poppins', sans-serif;
+   font-weight: 600;
+  }
 
-.section-1__para{
+.section-1__para,.section-2__para{
     text-align: center;
     margin:.5rem 0 0rem 0;
     padding:.8rem 2.5rem 2.5rem 2.5rem;
@@ -156,22 +165,6 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
     padding:4rem 1.5rem;
 
 }
-
-.section-2__heading{
-    text-align: center;
-    font-size:1.3rem;
-}
-
-.section-2__para{
-    text-align: center;
-    margin:.5rem 0 0rem 0;
-    padding:.8rem 2.5rem 2.5rem 2.5rem;
-    font-size: .9rem;
-    line-height: 1.5;
-    color:hsl(208, 11%, 55%);
-    font-weight: 400;
-}
-
 /* section-3 */
 
 .section-3{
@@ -182,11 +175,6 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
     .section-3__img{
         width:100%;
         padding:0 1.5rem;
-    }
-
-    .section-3__heading{
-        text-align: center;
-        font-size:1.3rem;
     }
 
     .section-3__para{
@@ -206,7 +194,6 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
     }
 /* section-4 */
     .section-4{
-        /* box-shadow: 1px 1px 5px 5px rgb(245, 244, 244); */
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -215,12 +202,6 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
         background-color: white;
         border-radius: 20px;
         }
-
-  .section-4__heading{
-            text-align: center;
-            font-size:1.22rem;
-            margin: 3rem 0 1rem 0;
-          }
         
     .section-4__link{
         width:250px;
@@ -348,17 +329,8 @@ box-shadow: 1px 1px 5px 5px rgb(245, 244, 244);
         border-radius:50%;
 
     }
-    #footer__insta-logo:hover{
+    #footer__insta-logo:hover ,  #footer__twitter-logo:hover , #footer__fb-logo:hover{
         color: hsl(322, 100%, 66%);
         border:1px solid hsl(322, 100%, 66%);
     }
-    #footer__twitter-logo:hover{
-        color: hsl(322, 100%, 66%);
-        border:1px solid hsl(322, 100%, 66%);
-
-    }
-    #footer__fb-logo:hover{
-        color: hsl(322, 100%, 66%);
-        border:1px solid hsl(322, 100%, 66%);
-
-    }
+   
