--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,9 @@
 }
 body{
     font-family: 'Open Sans', sans-serif;
-    /* 400 700 */
-    /* font-size: 16px; */
-   
 }
 
-@media (min-width:481px) and (max-width:768px) {
+@media (min-width:30.0625rem) and (max-width:48rem) {
     main{
         margin:3rem 2rem !important;
     }
@@ -20,7 +17,7 @@ body{
         width:9rem !important;
     }
     .header__link-block{
-        margin-top:-3px !important;
+        margin-top:-0.1875 !important;
     }
     .header__link{
         font-size: 0.7rem !important;
@@ -43,17 +40,19 @@ body{
         padding:.8rem 5rem 2.5rem 5rem !important;
     }
     .section-4{
-        top: 180px !important;
+        top: 11.25rem !important;
         margin:3rem;
         }
         .footer{
             margin: 7rem 0 0 0 !important;
             padding:12rem 5rem 0 1rem !important;
         }
-    
+    .section-1__block-1,.section-2__block-1,.section-3__block-1{
+        padding: 4rem 5rem !important;
+    }
 }
 
-@media (min-width:769px) and (max-width:991px) {
+@media (min-width:48.0625rem) and (max-width:61.9375rem) {
     header{
         padding:3rem 2rem !important;
         background-image: url("../assets/images/bg-hero-desktop.svg");
@@ -66,7 +65,7 @@ body{
         width:9.2rem !important;
     }
     .header__link-block{
-        margin-top:-2px !important;
+        margin-top:-0.125rem !important;
     }
     .header__link{
         font-size: 0.7rem !important;
@@ -89,18 +88,22 @@ body{
         padding:.8rem 9em 2.5rem 9rem !important;
     }
     .section-4{
-        top: 190px !important;
+        top: 11,875rem !important;
         margin:3.5rem;
         }
     .footer{
        margin: 7rem 0 0 0 !important;
         padding:14rem 5rem 0 1rem !important;
       }   
+      .section-1__img,.section-2__img,.section-3__img{
+        width:28.125rem !important;
+    }
+   
      
 }
 @media (min-width:992px) {
     .header__img{
-        height:400px !important
+        height:25rem !important
     }
      .header__section-1{
         display: flex;
@@ -149,12 +152,12 @@ body{
     .section-1,.section-3{
         display: flex;
         flex-direction: row-reverse !important;
-        height:400px !important;
+        height:25rem !important;
         margin-top: 3rem;
     }
     .section-2{
         flex-direction: row !important;
-        height:400px !important;
+        height:25rem !important;
         margin-top: 3rem;
 
     }
@@ -173,8 +176,8 @@ body{
     }
     .section-4{
         top: 150px !important;
-        margin:0 13.5rem !important;
-        padding-top: 3rem !important;
+        margin:0 10.5rem !important;
+        padding-top: 2rem !important;
     }
     .footer{
         padding: 10rem 6rem 0rem 3rem  !important;
@@ -210,6 +213,9 @@ body{
         font-size:1.8rem !important;
        font-weight: 700 !important;
       }
+      .footer__social-media {
+        align-items: start !important;
+    }
     
 }
 @media (min-width:1300px)  {
@@ -223,8 +229,7 @@ body{
     .header__img{
         height: 480px !important;
     }
-    .section-1__block-2,.section-2__block-2,.section-3__block-2{
-    }
+   
     .section-1__para,.section-2__para,.section-3__para{
         width:500px;
     }
@@ -254,7 +259,6 @@ a{
 .header{
    display: flex;
    justify-content: space-between;
-   /* justify-content: baseline; */
 }
 .header__logo{
     width:7rem;
