--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body{
    
      
 }
-@media (min-width:992px) {
+@media (min-width:62rem) {
     .header__img{
         height:25rem !important
     }
@@ -114,9 +114,10 @@ body{
     .header__link-block{
         margin-top:-1px !important;
     }
-    .header__link{
-        font-size: 0.7rem !important;
-        margin-right:1.5rem ;
+    .header__link {
+        font-size: 0.9rem !important;
+        margin-right: 1.5rem;
+        padding: 0.5rem 1.2rem !important;
     }
     .header__1st-heading{
         font-size: 1.9rem !important;
@@ -237,6 +238,11 @@ body{
     .footer__loc-para{
         margin-left: 1.875rem;
         width:21.875rem !important;
+        }
+        .section-4 {
+            top: 10.4rem !important;
+            margin: 0 14.5rem !important;
+            padding-top: 2rem !important;
         }
 
     
